// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`microsoft-foundry/models/deploy-model - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Unified Azure OpenAI model deployment skill with intelligent intent-based routing. Handles quick preset deployments, fully customized deployments (version/SKU/capacity/RAI policy), and capacity discovery across regions and projects. Works with or without an existing Foundry project — automatically discovers or creates one if needed.
USE FOR: deploy model, deploy gpt, create deployment, model deployment, deploy openai model, set up model, provision model, find capacity, check model availability, where can I deploy, best region for model, capacity analysis, deploy model without project, first time model deployment, deploy to new project, GPT deployment, Foundry deployment.
DO NOT USE FOR: listing existing deployments (use foundry_models_deployments_list MCP tool), deleting deployments, agent creation (use agent/create), project creation only (use project/create), quota management (use quota sub-skill), AI Search queries (use azure-ai), speech-to-text (use azure-ai).
",
  "extractedKeywords": [
    "across",
    "agent",
    "analysis",
    "automatically",
    "availability",
    "azure",
    "azure-ai",
    "best",
    "capacity",
    "check",
    "cli",
    "create",
    "creates",
    "creation",
    "customized",
    "deleting",
    "deploy",
    "deployment",
    "deployments",
    "discovers",
    "discovery",
    "existing",
    "find",
    "first",
    "foundry",
    "foundry_models_deployments_list",
    "fully",
    "handles",
    "intelligent",
    "intent-based",
    "listing",
    "management",
    "model",
    "monitor",
    "needed",
    "only",
    "openai",
    "policy",
    "preset",
    "project",
    "projects",
    "provision",
    "queries",
    "quick",
    "quota",
    "region",
    "regions",
    "routing",
    "search",
    "skill",
    "speech-to-text",
    "sub-skill",
    "time",
    "tool",
    "unified",
    "validation",
    "version",
    "where",
    "with",
    "without",
    "works",
  ],
  "name": "deploy-model",
}
`;

exports[`microsoft-foundry/models/deploy-model - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "across",
  "agent",
  "analysis",
  "automatically",
  "availability",
  "azure",
  "azure-ai",
  "best",
  "capacity",
  "check",
  "cli",
  "create",
  "creates",
  "creation",
  "customized",
  "deleting",
  "deploy",
  "deployment",
  "deployments",
  "discovers",
  "discovery",
  "existing",
  "find",
  "first",
  "foundry",
  "foundry_models_deployments_list",
  "fully",
  "handles",
  "intelligent",
  "intent-based",
  "listing",
  "management",
  "model",
  "monitor",
  "needed",
  "only",
  "openai",
  "policy",
  "preset",
  "project",
  "projects",
  "provision",
  "queries",
  "quick",
  "quota",
  "region",
  "regions",
  "routing",
  "search",
  "skill",
  "speech-to-text",
  "sub-skill",
  "time",
  "tool",
  "unified",
  "validation",
  "version",
  "where",
  "with",
  "without",
  "works",
]
`;
